--- a/globo.html
+++ b/globo.html
@@ -1,21 +1,19 @@
-<script src="https://content.jwplatform.com/libraries/zkpZNdwa.js"></script>
-<div id='playerBLiyUVVsMPRD'></div>
-<script type="text/javascript">
-    var player = jwplayer('playerBLiyUVVsMPRD');
-        jwplayer("playerBLiyUVVsMPRD").setup({
-            file: "",
-            image: "../../img/sportv.png",
-            autostart: true,
-            hlshtml: true,
-            width: '640',
-            height: '360',
-            logo: {
-            },
-            skin: {
-                name: "seven"
-            }
-        });
-    </script>
 
+<div style="padding:1px;margin-top:10px;margin-bottom:10px;bgcolor:blue;" id="player">
+<script type="text/javascript" src="http://jwpsrv.com/library/0m3LvPSQEeK1XRIxOUCPzg.js"></script>
+<script type="text/javascript">jwplayer.key="mkMbCfvoyQF92pS9SCse47lYfk+8L7RlFGgaEe6o5r8=";</script>
+<div id="player_7598"></div>
+<script type='text/javascript'>
+  jwplayer('player_7598').setup({
+	file: "http://webcs.in:25461/live/mundoip232323/d0jxCOjJZj/680.m3u8",
+        title: "",
+	width: "650",
+	height: "450",
+	primary: "flash",
+        bufferlength: '30',
+        Frontcolor: "red",
 
-<script src="https://apis.google.com/js/platform.js"></script>
+autostart:"true",
+  });
+</script>
+</div>
