--- a/globo.html
+++ b/globo.html
@@ -5,7 +5,7 @@
 <div id="player_7598"></div>
 <script type='text/javascript'>
   jwplayer('player_7598').setup({
-	file: "http://webcs.in:25461/live/mundoip232323/d0jxCOjJZj/680.m3u8",
+	file: "http://media-br-am.crackle.com/1/z/0l/kc9wb_480p.mp4",
         title: "",
 	width: "650",
 	height: "450",
